--- a/AuthService/Dockerfile
+++ b/AuthService/Dockerfile
@@ -1,6 +1,6 @@
 ﻿FROM mcr.microsoft.com/dotnet/sdk:9.0 AS build
 WORKDIR /src
-COPY . .
+COPY *.csproj .
 RUN dotnet restore
 RUN dotnet publish -c Release -o /app
 
