--- a/OrdersService/Dockerfile
+++ b/OrdersService/Dockerfile
@@ -1,7 +1,12 @@
 FROM mcr.microsoft.com/dotnet/sdk:9.0 AS build
 WORKDIR /src
-COPY *.csproj .
-RUN dotnet restore
+
+# Copiar o arquivo de projeto primeiro (para melhor cache)
+COPY ["OrdersService.csproj", "."]
+RUN dotnet restore "OrdersService.csproj"
+
+# Copiar o resto do código fonte
+COPY . .
 RUN dotnet publish -c Release -o /app
 
 FROM mcr.microsoft.com/dotnet/aspnet:9.0 AS runtime
@@ -9,4 +14,4 @@ WORKDIR /app
 COPY --from=build /app .
 ENV ASPNETCORE_URLS=http://+:5003
 EXPOSE 5003
-ENTRYPOINT ["dotnet","OrdersService.dll"]
+ENTRYPOINT ["dotnet", "OrdersService.dll"]
