--- a/ApiGateway/Dockerfile
+++ b/ApiGateway/Dockerfile
@@ -1,7 +1,10 @@
 FROM mcr.microsoft.com/dotnet/sdk:9.0 AS build
 WORKDIR /src
-COPY *.csproj .
-RUN dotnet restore
+
+COPY ["ApiGateway.csproj", "."]
+RUN dotnet restore "ApiGateway.csproj"
+
+COPY . .
 RUN dotnet publish -c Release -o /app
 
 FROM mcr.microsoft.com/dotnet/aspnet:9.0 AS runtime
