--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,7 +9,7 @@ services:
     ports:
       - "1433:1433"
     healthcheck:
-      test: ["CMD", "bash", "-c", "(/opt/mssql-tools/bin/sqlcmd -S localhost -U sa -P ${MSSQL_SA_PASSWORD} -Q 'SELECT 1') || exit 1"]
+      test: ["CMD", "/opt/mssql-tools/bin/sqlcmd", "-S", "localhost", "-U", "sa", "-P", "${MSSQL_SA_PASSWORD}", "-Q", "SELECT 1"]
     networks:
       - ecommerce-net
 
@@ -46,11 +46,11 @@ services:
       dockerfile: Dockerfile
     environment:
       - ASPNETCORE_URLS=http://+:5002
-      - ConnectionStrings__Default=${SQLSERVER_HOST},1433,${MSSQL_SA_PASSWORD},${INVENTORY_DB}
+      - ConnectionStrings__Default=Server=mssql,1433;Database=${INVENTORY_DB};User Id=sa;Password=${MSSQL_SA_PASSWORD};TrustServerCertificate=True;
       - JWT_SECRET=${JWT_SECRET}
-      - RABBITMQ__HOST=${RABBITMQ_HOST}
-      - RABBITMQ__USER=${RABBITMQ_USER}
-      - RABBITMQ__PASS=${RABBITMQ_PASS}
+      - RABBITMQ_HOST=rabbitmq
+      - RABBITMQ_USER=${RABBITMQ_USER}
+      - RABBITMQ_PASS=${RABBITMQ_PASS}
     ports:
       - "5002:5002"
     depends_on:
@@ -65,12 +65,12 @@ services:
       dockerfile: Dockerfile
     environment:
       - ASPNETCORE_URLS=http://+:5003
-      - ConnectionStrings__Default=${SQLSERVER_HOST},1433,${MSSQL_SA_PASSWORD},${ORDERS_DB}
+      - ConnectionStrings__Default=Server=mssql,1433;Database=${ORDERS_DB};User Id=sa;Password=${MSSQL_SA_PASSWORD};TrustServerCertificate=True;
       - JWT_SECRET=${JWT_SECRET}
-      - INVENTORY_URL=${INVENTORY_URL}
-      - RABBITMQ__HOST=${RABBITMQ_HOST}
-      - RABBITMQ__USER=${RABBITMQ_USER}
-      - RABBITMQ__PASS=${RABBITMQ_PASS}
+      - INVENTORY_URL=http://inventory:5002
+      - RABBITMQ_HOST=rabbitmq
+      - RABBITMQ_USER=${RABBITMQ_USER}
+      - RABBITMQ_PASS=${RABBITMQ_PASS}
     ports:
       - "5003:5003"
     depends_on:
