--- a/AuthService/Dockerfile
+++ b/AuthService/Dockerfile
@@ -8,10 +8,10 @@ RUN dotnet restore
 COPY . .
 RUN dotnet publish -c Release -o /app
 
-FROM mcr.microsoft.com/dotnet/aspnet:9.0
+FROM mcr.microsoft.com/dotnet/aspnet:9.0 AS runtime
 
 WORKDIR /app
 COPY --from=build /app .
 ENV ASPNETCORE_URLS=http://+:5000
 EXPOSE 5000
-ENTRYPOINT ["dotnet", "AuthService.dll"]   # troque o nome do DLL pelo do projeto correto
+ENTRYPOINT ["dotnet", "AuthService.dll"]
