--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -30,13 +30,19 @@ services:
       dockerfile: Dockerfile
     environment:
       - ASPNETCORE_URLS=http://+:5001
+      - DOTNET_ENVIRONMENT=Development
       - JWT_SECRET=${JWT_SECRET}
       - JWT_ISSUER=${JWT_ISSUER}
       - JWT_AUDIENCE=${JWT_AUDIENCE}
+      - RABBITMQ__HOST=rabbitmq
+      - RABBITMQ__USER=${RABBITMQ_USER}
+      - RABBITMQ__PASS=${RABBITMQ_PASS}
+      - ConnectionStrings__Default=Server=mssql,1433;Database=${AUTH_DB};User Id=sa;Password=${MSSQL_SA_PASSWORD};TrustServerCertificate=True;
     ports:
       - "5001:5001"
     depends_on:
       - mssql
+      - rabbitmq
     networks:
       - ecommerce-net
 
@@ -46,11 +52,12 @@ services:
       dockerfile: Dockerfile
     environment:
       - ASPNETCORE_URLS=http://+:5002
+      - DOTNET_ENVIRONMENT=Development
       - ConnectionStrings__Default=Server=mssql,1433;Database=${INVENTORY_DB};User Id=sa;Password=${MSSQL_SA_PASSWORD};TrustServerCertificate=True;
       - JWT_SECRET=${JWT_SECRET}
-      - RABBITMQ_HOST=rabbitmq
-      - RABBITMQ_USER=${RABBITMQ_USER}
-      - RABBITMQ_PASS=${RABBITMQ_PASS}
+      - RABBITMQ__HOST=rabbitmq
+      - RABBITMQ__USER=${RABBITMQ_USER}
+      - RABBITMQ__PASS=${RABBITMQ_PASS}
     ports:
       - "5002:5002"
     depends_on:
@@ -65,12 +72,13 @@ services:
       dockerfile: Dockerfile
     environment:
       - ASPNETCORE_URLS=http://+:5003
+      - DOTNET_ENVIRONMENT=Development
       - ConnectionStrings__Default=Server=mssql,1433;Database=${ORDERS_DB};User Id=sa;Password=${MSSQL_SA_PASSWORD};TrustServerCertificate=True;
       - JWT_SECRET=${JWT_SECRET}
       - INVENTORY_URL=http://inventory:5002
-      - RABBITMQ_HOST=rabbitmq
-      - RABBITMQ_USER=${RABBITMQ_USER}
-      - RABBITMQ_PASS=${RABBITMQ_PASS}
+      - RABBITMQ__HOST=rabbitmq
+      - RABBITMQ__USER=${RABBITMQ_USER}
+      - RABBITMQ__PASS=${RABBITMQ_PASS}
     ports:
       - "5003:5003"
     depends_on:
@@ -86,6 +94,7 @@ services:
       dockerfile: Dockerfile
     environment:
       - ASPNETCORE_URLS=http://+:${GATEWAY_PORT}
+      - DOTNET_ENVIRONMENT=Development
       - JWT_SECRET=${JWT_SECRET}
       - JWT_ISSUER=${JWT_ISSUER}
       - JWT_AUDIENCE=${JWT_AUDIENCE}
