--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,5 @@
 # JWT
-JWT_SECRET=VerySecret_ChangeThisToAStrongKey!
+JWT_SECRET=mysuperlongrandomsecretkey_ChangeThis123!
 JWT_ISSUER=ECommerce
 JWT_AUDIENCE=ECommerceClients
 JWT_EXPIRES_MINUTES=60
@@ -9,7 +9,8 @@ MSSQL_SA_PASSWORD=Danu1985
 SQLSERVER_HOST=mssql
 SQLSERVER_PORT=1433
 
-# DB names cada serviço usa seu DB
+# DB names
+AUTH_DB=AuthDb
 INVENTORY_DB=InventoryDb
 ORDERS_DB=OrdersDb
 
@@ -19,7 +20,7 @@ RABBITMQ_PORT=5672
 RABBITMQ_USER=guest
 RABBITMQ_PASS=guest
 
-# URLs usado para HttpClient quando um service chama outro
+# URLs
 INVENTORY_URL=http://inventory:5002
 AUTH_URL=http://auth:5001
 
