--- a/.env.example
+++ b/.env.example
@@ -5,7 +5,7 @@ JWT_AUDIENCE=ECommerceClients
 JWT_EXPIRES_MINUTES=60
 
 # SQL Server
-MSSQL_SA_PASSWORD=Danu1985
+MSSQL_SA_PASSWORD=P@ssw0rd123!
 SQLSERVER_HOST=mssql
 SQLSERVER_PORT=1433
 
