--- a/AuthService/Dockerfile
+++ b/AuthService/Dockerfile
@@ -1,17 +1,15 @@
 ﻿FROM mcr.microsoft.com/dotnet/sdk:9.0 AS build
-
 WORKDIR /src
 
-COPY *.csproj ./
-RUN dotnet restore
+COPY ["AuthService.csproj", "."]
+RUN dotnet restore "AuthService.csproj"
 
 COPY . .
 RUN dotnet publish -c Release -o /app
 
 FROM mcr.microsoft.com/dotnet/aspnet:9.0 AS runtime
-
 WORKDIR /app
 COPY --from=build /app .
-ENV ASPNETCORE_URLS=http://+:5000
-EXPOSE 5000
+ENV ASPNETCORE_URLS=http://+:5001
+EXPOSE 5001
 ENTRYPOINT ["dotnet", "AuthService.dll"]
