--- a/AuthService/appsettings.Development.json
+++ b/AuthService/appsettings.Development.json
@@ -1,8 +1,18 @@
 {
   "Logging": {
     "LogLevel": {
-      "Default": "Information",
+      "Default": "Debug",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "Default": "Server=localhost,1433;Database=ECommerceDevDb;User Id=sa;Password=P@ssw0rd123!;TrustServerCertificate=True;"
+  },
+  "JWT": {
+    "Secret": "mysuperlongrandomsecretkey_ChangeThis123!",
+    "Issuer": "ECommerce",
+    "Audience": "ECommerceClients",
+    "ExpiresMinutes": 60
   }
 }
