--- a/OrdersService/appsettings.json
+++ b/OrdersService/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "ConnectionStrings": {
+  "DefaultConnection": "Server=mssql,1433;Database=OrdersDb;User Id=sa;Password=P@ssw0rd123!;TrustServerCertificate=True"
+},
   "AllowedHosts": "*"
 }
